# Kush-Sahni-2210110371-GitHub-Repository-Analyzer-Agent-using-LangGraph-Git-MCP-MAT496

./: DEMO_COMMANDS.md  GitHub_Analyzer_With_Tracing_LangGraph_Studio.ipynb  README.md  START_HERE.md  TALKING_POINTS.md  VIDEO_DEMO_SCRIPT.md  github_analyzer_studio.py  langgraph.json
github_agent/: .dockerignore  .env.example  .gitignore  CONFIGURATION_REVIEW.md  Dockerfile  FINAL_FIX.md  FINAL_PROJECT_REPORT.md  FINAL_SUCCESS_REPORT.md  FIX_SUMMARY.md  PHASE5_PROGRESS.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  README.md  README_STREAMLIT.md  TASK_DELEGATION_FIX.md  TESTING_GUIDE.md  TESTING_RECOMMENDATIONS.md  TESTING_RESULTS.md  docker-compose.yml  pyproject.toml  quick_test.py  requirements.txt  setup.py  streamlit_app.py  verify_setup.py
github_agent/.github/workflows/: docker.yml  test.yml
github_agent/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md
github_agent/examples/: README.md  analyze_issue.py  ask_repository.py  custom_workflow.py
github_agent/github_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
github_agent/src/: __init__.py  cli.py  config.py  errors.py  main.py  prompts.py  state.py  task_tool.py
github_agent/src/agents/: __init__.py
github_agent/src/tools/: __init__.py  analysis_tools.py  file_tools.py  github_tools.py  search_tools.py  todo_tools.py
github_agent/tests/: __init__.py  test_end_to_end.py  test_integration.py  test_phase1.py  test_phase4.py
